# chip_8_emulator

./: README.md
rust_chip_8/: Cargo.toml
rust_chip_8/src/: instruction.rs  lib.rs
