[package]
name = "rust_chip_8"
version = "0.1.0"
authors = ["Rajkaran Singh Grewal <rajkaran.singh.grewal5@gmail.com>"]
description = "A Chip 8 Emulator"
license = "MIT"
repository = "https://github.com/TomaicazyX/chip_8_emulator"
edition = "2020"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"